// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartContainer > Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chart-column w-8 h-8 text-slate-500 mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 3v16a2 2 0 0 0 2 2h16"
        />
        <path
          d="M18 17V9"
        />
        <path
          d="M13 17V5"
        />
        <path
          d="M8 17v-3"
        />
      </svg>
      <span
        class="text-sm text-slate-400"
      >
        无数据
      </span>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for error state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert w-8 h-8 text-red-400 mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <span
        class="text-sm text-red-400 mb-3"
      >
        加载失败
      </span>
      <button
        class="flex items-center gap-2 px-3 py-1.5 text-xs bg-surface-200 hover:bg-surface-300 text-white rounded-lg transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-refresh-cw w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
          />
          <path
            d="M21 3v5h-5"
          />
          <path
            d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
          />
          <path
            d="M8 16H3v5"
          />
        </svg>
        重试
      </button>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex items-center justify-between px-4 py-3 border-b border-white/5"
    >
      <div>
        <h3
          class="text-sm font-medium text-white"
        >
          加载中
        </h3>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center"
      style="height: 300px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle w-8 h-8 text-primary animate-spin mb-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <span
        class="text-sm text-slate-400"
      >
        加载中...
      </span>
    </div>
  </div>
</div>
`;

exports[`ChartContainer > Snapshot Tests > matches snapshot for normal state 1`] = `
<div>
  <div
    class="bg-surface-100 rounded-xl border border-white/5"
  >
    <div
      class="flex items-center justify-between px-4 py-3 border-b border-white/5"
    >
      <div>
        <h3
          class="text-sm font-medium text-white"
        >
          销售图表
        </h3>
      </div>
    </div>
    <div
      class="p-4"
    >
      <div>
        图表内容
      </div>
    </div>
  </div>
</div>
`;
